--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
 name: app_environment
 channels:
   - snowflake
-  - conda-forge
 dependencies:
-  - python=3.9
-  - snowflake-snowpark-python=1.11.0
-  - streamlit=1.32.2
-  - rich=13.7.1
-  - pygments
+  - python=3.11.*
+  - snowflake-snowpark-python=
+  - streamlit=
